--- a/index.html
+++ b/index.html
@@ -61,19 +61,19 @@
             <div class="campus-col">
                 <img src="img/london.png" >
                 <div class="layer">
-                    <h3>LONDON</h3>
+                    <h3>DELHI</h3>
                 </div>
             </div>
             <div class="campus-col">
                 <img src="img/newyork.png" >
                 <div class="layer">
-                    <h3>NEW YORK</h3>
+                    <h3>MUMBAI</h3>
                 </div>
             </div>
             <div class="campus-col">
                 <img src="img/washington.png" >
                 <div class="layer">
-                    <h3>WASHINGTON</h3>
+                    <h3>BANGALORE</h3>
                 </div>
             </div>
         </div>
