--- a/contact.html
+++ b/contact.html
@@ -52,7 +52,7 @@
                 <div>
                     <i class="fa fa-envelope-o"></i> 
                     <span>
-                        <h5>info@bhainsatutorialpro.com</h5>
+                        <h5>info@bhainsa-tech.com</h5>
                         <p>Email us your query</p>
                     </span>
                 </div>
