--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </nav>
     <div class="text-box">
         <h1>World's Biggest University</h1>
-        <p>Making wedsite is now a  easiest thing in tha world.You just need to learning HTML, CSS, <br> java script and you are just to go
+        <p>Making website is now a  easiest thing in the world.You just need to learning HTML, CSS, <br> java script and you are just to go
         </p>
         <a href="" class="h-btn">Visit Us To know More</a>
     </div>
